--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,2 +1,6 @@
 {
+    "editor.stickyScroll.enabled": false,
+    "files.autoSave": "onFocusChange",
+    "python-envs.defaultEnvManager": "ms-python.python:venv",
+    "python-envs.pythonProjects": [],
 }
